--- a/.github/workflows/main_mds-to-pdf-converter-az-functions.yml
+++ b/.github/workflows/main_mds-to-pdf-converter-az-functions.yml
@@ -37,10 +37,12 @@ jobs:
           popd
       
       - name: Install Chromium manually
+        shell: pwsh
         run: |
           Invoke-WebRequest -Uri "https://storage.googleapis.com/chrome-for-testing-public/132.0.6834.83/win64/chrome-win64.zip" -OutFile "chrome.zip"
-          Expand-Archive -Path chrome.zip -DestinationPath chrome
-          Move-Item chrome\chrome-win64 wwwroot\chrome-win64
+          Expand-Archive -Path "chrome.zip" -DestinationPath "."
+          Move-Item -Path "chrome-win64" -Destination "wwwroot/chrome-win64"
+          Remove-Item chrome.zip
       
       - name: Login to Azure
         uses: azure/login@v2
