Deploy: Fix double nexting when unzipping the chromium

--- a/.github/workflows/main_mds-to-pdf-converter-az-functions.yml
+++ b/.github/workflows/main_mds-to-pdf-converter-az-functions.yml
@@ -44,10 +44,8 @@ jobs:
           New-Item -ItemType Directory -Force -Path "chrome-extracted"
           
           Expand-Archive -Path "chrome.zip" -DestinationPath "chrome-extracted"
-          
-          New-Item -ItemType Directory -Force -Path "./output/chrome-win64"
 
-          Copy-Item -Path "chrome-extracted/*" -Destination "./output/chrome-win64" -Recurse -Force
+          Copy-Item -Path "chrome-extracted/*" -Destination "./output" -Recurse -Force
 
           Remove-Item chrome.zip
           Remove-Item -Recurse -Force chrome-extracted
