--- a/az-functions/azf-md-to-pdf-converter.csproj
+++ b/az-functions/azf-md-to-pdf-converter.csproj
@@ -29,4 +29,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
