--- a/md2pdf-container/md2pdf-container.csproj
+++ b/md2pdf-container/md2pdf-container.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
