--- a/.github/workflows/main_md2pdffunctionapp.yml
+++ b/.github/workflows/main_md2pdffunctionapp.yml
@@ -9,6 +9,7 @@ on:
       - main
     paths:
       - "AzureFunctions/**"
+      - ".github/workflows/main_md2pdffunctionapp.yml"
   workflow_dispatch:
 
 env:
@@ -54,3 +55,4 @@ jobs:
           package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
 
           
+
